# coding_interviews

./: .clang-format  01_assignment_operation.cc  01_assignment_operation.md  02_singleton.cc  02_singleton.md  03_duplication_in_array.cc  03_duplication_in_array.md  03_duplication_in_array_no_edit.cc  03_duplication_in_array_no_edit.md  04_find_in_partially_sorted_matrix.cc  04_find_in_partially_sorted_matrix_lb.cc  05_replace_spaces.cc  06_print_list_in_reversed_order.cc  06_print_list_in_reversed_order.md  07_construct_binary_tree.cc  07_construct_binary_tree.md  08_next_node_in_binary_tree.cc  09_queue_with_two_stacks.cc  10_crasy_jump_floor.cc  10_crasy_jump_floor.md  10_fibonacci.cc  10_jump_floor.cc  10_rect_cover.cc  11_min_number_in_rotated_array.cc  11_min_number_in_rotated_array.md  12_path_in_matrix.cc  12_path_in_matrix.md  13_robot_moving_count.cc  13_robot_moving_count.md  14_cut_the_rope.cc  14_cut_the_rope.md  14_cut_the_rope_greedy.cc  15_number_of_1.cc  15_number_of_1.md  16_pow.cc  16_pow.md  17_print_1_to_max_of_n_digits.cc  17_print_1_to_max_of_n_digits.md  17_print_1_to_max_of_n_digits_1.cc  18_delete_node_in_list.cc  (+91 more)
gtest_proj/: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh
gtest_proj/src/: 01_assignment_operation.cc  02_1_singleton_derived.cc  02_singleton.cc  02_singleton_derived.cc  03_1_duplication_in_array_no_edit.cc  03_2_duplication_in_array_no_edit_once.cc  03_duplication_in_array.cc  03_duplication_in_array_no_edit.cc  03_duplication_in_array_no_edit_once.cc  04_find_in_partially_sorted_matrix.cc  05_1_replace_spaces_faster.cc  (+117 more)
(+79 files in other folders)
